--- a/Examples/cv19functions.ipynb
+++ b/Examples/cv19functions.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linux\n"
+     ]
+    }
+   ],
    "source": [
     "# Optional: For pop-up plots\n",
     "import platform\n",
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,13 +140,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.plot(t,Events(t))\n",
     "plt.title('Events function')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fconstructor = {\n",
+    "            \"function\": \"events\",\n",
+    "            \"values\": [\n",
+    "              0.3,\n",
+    "              {\n",
+    "                \"function\": \"transition\",\n",
+    "                \"ftype\": 0,\n",
+    "                \"initvalue\": 0.3,\n",
+    "                \"endvalue\": 1,\n",
+    "                \"concavity\": 0,\n",
+    "                \"t_init\":500,\n",
+    "                \"t_end\":510\n",
+    "              }\n",
+    "            ],\n",
+    "            \"days\": [\n",
+    "              [\n",
+    "                0,\n",
+    "                500\n",
+    "              ],\n",
+    "              [\n",
+    "                500,\n",
+    "                540\n",
+    "              ]\n",
+    "            ],\n",
+    "            \"default\": 0.3\n",
+    "          }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "build1 = cv19functions.build(fconstructor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = np.linspace(490,520)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7fc5ce068f70>]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.plot(t,build1(t))"
    ]
   },
   {
